# Collector

./: .gitignore  Justfile  Makefile  flake.nix  justfile
blog/: .zellij.kdl  Justfile  config.toml  flake.nix  justfile  overlays.nix  result
blog/nix/: shell.nix
blog/public/: search_index.en.js
blog/themes/: Zola-Doks  adidoks  serene
overlays/: default.nix
source/: .envrc  Cargo.toml  Justfile  flake.nix  justfile  rust-toolchain.toml  weight.json
source/src/: app.rs  cmd.rs  decompression.rs  fs.rs  handler.rs  main.rs  ui.rs
source/src/ui/: mod.rs
source/src/widgets/: input_box.rs
