[package]
authors = ["jackyliu <18922251299@163.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "Collector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }

